# trading-bot

./: .env.example  .gitignore  CONTEXT.md  README.md  SCHEDULE.md  pyproject.toml
docs/adr/: 0001-local-history-store-with-backfill.md  0002-promote-trade-as-separate-from-fill.md  0003-local-fifo-realized-pnl-pre-fee.md
docs/prd/: 0001-issue-body.md  0001-phase-a-kis-rebalance.md  0002-phase-b-history-store.md
portfolios/: example.yaml
scripts/: sync_history.bat
tests/integration/: test_kis_mock_backfill.py  test_kis_mock_handshake.py
tests/unit/: test_history_migrations.py  test_history_pnl.py  test_history_store.py  test_history_store_realized_pnl.py  test_history_sync.py  test_kis_broker.py  test_kis_history.py  test_kis_open_orders.py  test_orders_form.py  test_portfolio_loader.py  test_portfolio_view.py  test_rebalance_execute.py  test_rebalance_plan.py  test_rebalance_rate_limiter.py  test_resolver.py  test_settings.py
trader/brokers/: base.py  kis.py
trader/config/: settings.py
trader/domain/: money.py  types.py
trader/history/: __main__.py  pnl.py  store.py  sync.py
trader/history/migrations/: 0001_init.sql  __init__.py
trader/orders/: form.py
trader/portfolio/: loader.py  view.py
trader/rebalance/: execute.py  plan.py  rate_limiter.py
trader/tickers/: english_aux.csv  master.py  resolver.py
ui/: _common.py  streamlit_app.py
ui/pages/: 1_Place_Order.py  2_Rebalance.py  3_Positions.py  4_Open_Orders.py  5_History.py  6_Tickers.py
